--- a/ayurhelix/package.json
+++ b/ayurhelix/package.json
@@ -14,6 +14,8 @@
     "framer-motion": "^12.23.16",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-fast-marquee": "^1.6.5",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.9.1",
     "tailwindcss": "^4.1.13"
   },
