--- a/ayurhelix/package.json
+++ b/ayurhelix/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@dr.pogodin/react-helmet": "^3.0.4",
     "@tailwindcss/vite": "^4.1.13",
     "framer-motion": "^12.23.16",
     "react": "^19.1.1",
@@ -28,6 +29,7 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.4.0",
+    "sitemap": "^8.0.0",
     "vite": "^7.1.6"
   }
 }
