--- a/ayurhelix/package.json
+++ b/ayurhelix/package.json
@@ -18,6 +18,7 @@
     "react-fast-marquee": "^1.6.5",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.9.1",
+    "react-slick": "^0.31.0",
     "tailwindcss": "^4.1.13"
   },
   "devDependencies": {
